# AdventOfCode

./: .clang-format  .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-2021.yml  cmake.yml
2020/: CMakeLists.txt
2020/src/: CMakeLists.txt
2020/src/01/: CMakeLists.txt  day_01.cpp  input_2020_01_a.h
2020/src/02/: CMakeLists.txt  day_02.cpp  input_2020_02_a.h
2020/src/03/: CMakeLists.txt  day_03.cpp
2020/src/04/: CMakeLists.txt  day_04.cpp
2020/src/05/: CMakeLists.txt  day_05.cpp
2020/src/06/: CMakeLists.txt  day_06.c
2020/src/07/: CMakeLists.txt  day_07.cpp
2020/src/08/: CMakeLists.txt  day_08.cpp
2020/src/09/: CMakeLists.txt  day_09.cpp
2020/src/10/: CMakeLists.txt  day_10.cpp
2020/src/11/: CMakeLists.txt  day_11.cpp
2020/src/12/: CMakeLists.txt  day_12.cpp
2020/src/13/: CMakeLists.txt  day_13.cpp
2020/src/14/: CMakeLists.txt  day_14.cpp
2020/src/15/: CMakeLists.txt  day_15.cpp
2020/src/common/: NumberConversions.hpp  fileUtils.hpp
2021/cpp/: CMakeLists.txt  cli.cpp
2021/cpp/examples/aoc_cli/: CMakeLists.txt
2021/cpp/examples/aoc_cli/src/: CMakeLists.txt  cli_main.cpp
2021/cpp/include/: CMakeLists.txt  ipuzzle.hpp  types.hpp
2021/cpp/lib/: CMakeLists.txt
2021/cpp/lib/inc/: aoc_y2021.hpp  ipuzzle.hpp  puzzle_factory.hpp
2021/cpp/lib/src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day07.cpp  day08.cpp  puzzle_common.hpp  puzzle_factory.cpp  utils.cpp  utils.hpp
2021/cpp/src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  puzzle_common.hpp  puzzle_factory.cpp  utils.hpp
2021/cpp/tests/: CMakeLists.txt  test_day01.cpp  test_day02.cpp  test_day03.cpp  test_day04.cpp  test_day05.cpp  test_day06.cpp  test_day07.cpp  test_day08.cpp  test_day09.cpp  test_day10.cpp  test_day11.cpp  test_day12.cpp  test_day13.cpp  test_day14.cpp  test_day15.cpp  test_day16.cpp
